--- a/boards/shields/benball44/benball44.dtsi
+++ b/boards/shields/benball44/benball44.dtsi
@@ -27,4 +27,9 @@
         kscan = <&kscan0>; // Label of the kscan node, optional if all layouts use the same
         transform = <&default_transform>; // Label of the matrix transform for this layout
     };
+    
+    chosen {
+        zmk,physical-layout = &physical_layout0;
+        // Other chosen items
+    };
 };
